# todo_django_with_poetry

./: Dockerfile  Makefile  entrypoint.sh
todo_app/: pyproject.toml
todo_app/config/: settings.py  urls.py
todo_app/tasks/: urls.py
todo_app/tasks/migrations/: 0001_initial.py  0002_alter_task_done.py  0003_alter_task_title.py
todo_app/tasks/models/: task.py
todo_app/tasks/serializers/: task.py
todo_app/tasks/tests/api/tasks/: __init__.py  factory.py  test_rest_api.py
todo_app/tasks/views/api/: task.py
